added emoji for favicon

--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -3,27 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-   
-    <title>Brandi Mason Portfolio</title>
+    <!-- emoji for favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👩🏼‍💻</text></svg>">
 
-    <!-- Nav Bar -->
-    <header class="header">
-      <a href="#" class="logo">Portfolio
-          <span class="animate" style="--i:1;"></span>
-      </a>
-      <div class="bx bx-menu" id="menu-icon">
-          <span class="animate " style="--i:2;"></span>
-      </div>
-      <nav class="navbar">
-          <a href="#home" class="active">Home</a>
-          <a href="#about">About</a>
-          <a href="#skills">Skills</a>
-          <a href="#projects">Projects</a>
-          <a href="#blogs">Blogs</a>
-          <a href="#contact">Contact</a>
-          <span class="active-nav"></span>
-          <span class="animate " style="--i:2;"></span>
-      </nav>
+    <title>Brandi Mason</title>
 
   </header>
   </head>
